--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "autoprefixer": "^10.4.20",
+        "@tailwindcss/forms": "^0.5.2",
+        "alpinejs": "^3.4.2",
+        "autoprefixer": "^10.4.2",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0.0",
-        "postcss": "^8.4.47",
-        "prettier": "^3.3.3",
-        "prettier-plugin-tailwindcss": "^0.6.8",
+        "postcss": "^8.4.31",
         "tailwindcss": "^3.4.13",
         "vite": "^5.0.0"
     }
