--- a/.htaccess
+++ b/.htaccess
@@ -5,9 +5,8 @@
 
     RewriteEngine On
     RewriteCond %{HTTP_HOST} ^floriscodes.nl$ [NC,OR]
-    RewriteCond %{HTTP_HOST} ^floriscodes.nl$
-    RewriteCond %{REQUEST_URI} !public_html/
-    RewriteRule (.*) /public_html/$1 [L]
+    RewriteCond %{REQUEST_URI} !FlorisCodes/public/
+    RewriteRule (.*) /FlorisCodes/public/$1 [L]
 
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
